Committing a couple weekends' experiments.  Repaired the loading and type checking of specifications.
git-svn-id: file:///home/jls/openjml/repo_master/OpenJML/trunk@1104 1627bae4-3225-46cb-a19f-684862636fd9